[package]
name = "hidden_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.4", features = ["blocking", "json"] }
trust-dns-resolver = "0.20.3"
url = "2.2.2"
colored = "2.0.0"