[package]
name = "domain_hunter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.4", features = ["json"] }
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = {version = "0.20.3", features = ["dns-over-rustls"]}
trust-dns-proto = "0.20.3"
regex = "1"
url = "2.2.2"
colored = "2.0.0"
clap = "2.33.3"